--- a/spin-and-win-mobile-app/.env
+++ b/spin-and-win-mobile-app/.env
@@ -1,5 +1,5 @@
 # Replace with your deployed backend URL after deployment
-EXPO_PUBLIC_API_URL=https://spin-and-win-backend.onrender.com
+EXPO_PUBLIC_API_URL=https://sample-spinfinity-app-repo.onrender.com
 
 # For development, use localhost
 # EXPO_PUBLIC_API_URL=http://localhost:4000
