--- a/spin-and-win-mobile-app/app.json
+++ b/spin-and-win-mobile-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "spin-and-win-mobile-app",
+    "name": "PEH Spinfinity Analytics",
     "slug": "spin-and-win-mobile-app",
     "version": "1.0.0",
     "orientation": "portrait",
