--- a/spin-and-win-mobile-app/app.json
+++ b/spin-and-win-mobile-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "PEH Spinfinity Analytics",
-    "slug": "spin-and-win-mobile-app",
+    "slug": "PEH Spinfinity Analytics",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/spinfinity-logo.png",
