--- a/spin-and-win-mobile-app/.env
+++ b/spin-and-win-mobile-app/.env
@@ -1,5 +1,5 @@
 # Replace with your deployed backend URL after deployment
-EXPO_PUBLIC_API_URL=https://sample-spinfinity-app-repo.onrender.com
+EXPO_PUBLIC_API_URL=http://localhost:4000
 
 # For development on Android emulator, use 10.0.2.2
 # When testing from a physical device, use your LAN IP instead of localhost
