--- a/spin-and-win-mobile-app/eas.json
+++ b/spin-and-win-mobile-app/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 12.4.0"
+    "version": ">= 3.0.0"
   },
   "build": {
     "development": {
@@ -15,7 +15,7 @@
     },
     "production": {
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle"
       }
     }
   },
